# hashing-result

./: CMakeLists.txt  README.md  hr-go.go
include/: argparse.hpp  argparser.hpp  constants.hpp  crc32hasher.hpp  filereader.hpp  filewriter.hpp  hasher.hpp  ihasher.hpp  threadpool.hpp
src/: argparse.cpp  argparser.cpp  crc32hasher.cpp  filereader.cpp  filewriter.cpp  hasher.cpp  main.cpp  threadpool.cpp
